# indi-ffmpeg

./: CMakeLists.txt  NOREADME  README.md  config.h.cmake  ffmpeg.cpp  ffmpeg.h  indi_ffmpeg.xml  indi_ffmpeg_sk.xml  noreadme-ffplay.txt
cmake_modules/: nopkg-config-FindFFMPEG.cmake
